Moved octant identification to a separate procedure and applied cases for angle calculation

--- a/asm/atan2/atan2.vcxproj
+++ b/asm/atan2/atan2.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <MASM Include="main.asm" />
+    <MASM Include="octant.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="octant.inc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
