--- a/asm/atan2/atan2.vcxproj.filters
+++ b/asm/atan2/atan2.vcxproj.filters
@@ -2,5 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <MASM Include="main.asm" />
+    <MASM Include="octant.asm" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="octant.inc" />
   </ItemGroup>
 </Project>
