Changed the name of atan2 procedure to ac_atan2, the resulting angle of ac_atan2 procedure is now passed by reference and added more code documentation

--- a/asm/atan2/atan2.vcxproj
+++ b/asm/atan2/atan2.vcxproj
@@ -19,12 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="atan2.asm" />
+    <MASM Include="ac_atan2.asm" />
     <MASM Include="main.asm" />
     <MASM Include="octant.asm" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="atan2.inc" />
+    <None Include="ac_atan2.inc" />
     <None Include="octant.inc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
