Added integer to string ASCII parsing function as well as a procedure  for writing the values of the calculated angles in an ´output.txt´ file

--- a/asm/atan2/atan2.vcxproj
+++ b/asm/atan2/atan2.vcxproj
@@ -20,11 +20,15 @@
   </ItemGroup>
   <ItemGroup>
     <MASM Include="ac_atan2.asm" />
+    <MASM Include="ascii_parsing.asm" />
+    <MASM Include="io_functions.asm" />
     <MASM Include="main.asm" />
     <MASM Include="octant.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ac_atan2.inc" />
+    <None Include="ascii_parsing.inc" />
+    <None Include="io_functions.inc" />
     <None Include="octant.inc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
