--- a/asm/atan2/atan2.vcxproj.filters
+++ b/asm/atan2/atan2.vcxproj.filters
@@ -4,9 +4,13 @@
     <MASM Include="main.asm" />
     <MASM Include="octant.asm" />
     <MASM Include="ac_atan2.asm" />
+    <MASM Include="ascii_parsing.asm" />
+    <MASM Include="io_functions.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="octant.inc" />
     <None Include="ac_atan2.inc" />
+    <None Include="ascii_parsing.inc" />
+    <None Include="io_functions.inc" />
   </ItemGroup>
 </Project>
